# FITbuddy

./: FITbuddy.sln  Main.c changesForCalorieFeature.txt  README.md  calorie.c  calorie.h
FITbuddy/: ._workout.h  .c  BMI.c  BMI.h  FITbuddy.vcxproj  FITbuddy.vcxproj.filters  Progress.txt  Tips.c  Tips.h  Workout.txt  bmi_test_input.txt  bmi_val_input.txt  calorie.c  calorie.h  calorie_test_input.txt  calorie_val_input.txt  calories.txt  console_color.h  delete_test_input.txt  empty_delete_input.txt  full_test_input.txt  log_firstweight.cpp  main.c  main_boundary_input.txt  negative_test_input.txt  report.c  report.h  test_calorie.c  tips.txt  workout.c  workout.h  workout_val_input.txt
IntegrationTesting/: CMakeLists.txt
IntegrationTesting/IntegrationTesting/: CMakeLists.txt  run_with_input.cmake
TestProject/: Calorie_UnitTests.cpp  TestProject.cpp  TestProject.vcxproj  TestProject.vcxproj.filters  pch.h  report_UnitTests.cpp  test_workout.cpp
